$Id: History,v 1.121 2001-05-24 13:24:09 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

24th May 2001  John Allison
- Added missing files G4ASCIITreeMessenger.hh/cc.

23rd May 2001  John Allison
- Eliminated Linux pedantic warnings, except FukuiRenderer, VRML and OPACS.

22nd May 2001  John Allison
- Refined ASCIITree.

21st May 2001  John Allison (vis-V03-01-02)
- Minor bug corrections (mostly to fix things that used to work with the
  old /vis~/ commands but ceased to work with the new /vis/commands:
  o If a scene is empty at drawing time, the "world" is added.
  o Window size hint now works for OpenGL.
- Fixed some minor warnings for strict C++ (size_t, etc.).

18th May 2001 John Allison
- Removed unnecessary virtual inheritance of G4VViewer in G4RayTracerViewer.
- Introduced verbosity to ASCIITree.
- Proper deletion of directories in G4VisManagerRegisterMessengers.

15th May 2001 John Allison